version/0.17/_sources/api/solver/_autosummary/settings/solid_1.rst.txt
:orphan:

.. _solid_1:

solid
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.solid_1.solid
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`solid_child <solid_child_1>`


.. rubric:: Included in:

==================================================   =================================

Parent                                                                         Summary

==================================================   =================================
:ref:`cell_zone_conditions <cell_zone_conditions>`       'cell_zone_conditions' child.

==================================================   =================================

